chore: save progress - ReviewsService Phase 1 and 2 complete